--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "homepage": "https://github.com/JSSaini07/JSSaini07.github.io#readme",
   "devDependencies": {
     "grunt": "^1.0.3",
-    "grunt-assets-inline": "^1.1.3",
+    "grunt-contrib-imagemin": "^3.1.0",
     "grunt-contrib-less": "^2.0.0",
     "grunt-contrib-uglify": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-inline-css": "^1.0.0",
+    "imagemin-mozjpeg": "^8.0.0",
     "jit-grunt": "^0.10.0"
   },
   "dependencies": {
