--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-uglify": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-optipng": "^6.0.0",
     "jit-grunt": "^0.10.0"
   },
   "dependencies": {
